[project]
name = "web-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "leo",email = "liubo@cjitech.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "playwright (>=1.57.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "playwright-stealth (>=2.0.0,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
